[metadata]
name = morphsed
author = RuanCun Li
#author_email =
license = MIT
license_file = LICENSE
#url =
#description = blabla
long_description = file: README.md
edit_on_github = False
github_project = RuancunLi/MorphSED

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    matplotlib
    pyprofit
    lmfit
#scripts=
#    bin/first.py
#    bin/second.py

#[options.entry_points]
#console_scripts =
#    example_mod = csst_slitless_calibration.example_mod:main
#
#[options.extras_require]
#all =
#    healpy
#test =
#    pytest-astropy
#docs =
#    sphinx-astropy

#[options.package_data]
#csst_slitless_calibration = data/*

#[tool:pytest]
#testpaths = "csst_slitless_calibration" "docs"
#astropy_header = true
#doctest_plus = enabled
#text_file_format = rst
#addopts = --doctest-rst
#
[coverage:run]
omit =
    morphsed/_astropy_init*
    morphsed/conftest.py
    morphsed/*setup_package*
    morphsed/tests/*
    morphsed/*/tests/*
    morphsed/extern/*
    morphsed/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
